--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,18 @@
 
 [metadata]
 name = stelar_client
-description = Add a short description here!
+description = A Python client for the STELAR KLMS API.
 author = Vasilis Samoladas
 author_email = vsam@softnet.tuc.gr
-license = MIT
-license_files = LICENSE.txt
+license = AGPL
+license_files = LICENSE
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/pyscaffold/pyscaffold/
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+    Documentation = https://github.com/stelar-eu/stelar_client/
+    Source = https://github.com/stelar-eu/stelar_client/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -28,10 +28,13 @@ platforms = any
 
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.org/classifiers/
+#Development Status :: 3 - Alpha
+#Development Status :: 4 - Beta
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 1 - Planning
     Programming Language :: Python
-
+    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
+    Topic :: Database :: Front-Ends
 
 [options]
 zip_safe = False
@@ -49,7 +52,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    requests>=2.2,<3.0
 
 [options.packages.find]
 where = src
