PyPi config updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,10 @@
 
 [metadata]
 name = stelar_client
+version = 0.0.1
 description = A Python client for the STELAR KLMS API.
-author = Vasilis Samoladas
-author_email = vsam@softnet.tuc.gr
+author = Vasilis Samoladas, Dimitrios Petrou
+author_email = vsam@softnet.tuc.gr, dpetrou@tuc.gr
 license = AGPL
 license_files = LICENSE
 long_description = file: README.rst
@@ -38,6 +39,7 @@ classifiers =
 
 [options]
 zip_safe = False
+use_scm_version = True
 packages = find_namespace:
 include_package_data = True
 package_dir =
