--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@
 name = stelar_client
 version = 0.0.1
 description = A Python client for the STELAR KLMS API.
-author = Vasilis Samoladas, Dimitrios Petrou
-author_email = vsam@softnet.tuc.gr, dpetrou@tuc.gr
+author = Vasilis Samoladas, Nikolas Bakatselos, Dimitris Petrou
+author_email = vsam@softnet.tuc.gr, nbakatselos@tuc.gr, dpetrou@tuc.gr
 license = AGPL
 license_files = LICENSE
 long_description = file: README.rst
