Made some changes in the import logic. Now, modules of the 'stelar_cliend' package are imported relatively. Also, added some dependencies in setup.cfg. Deleted a redundant line in Client.__normalize_base_url().

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     requests>=2.2,<3.0
+    minio
 
 [options.packages.find]
 where = src
@@ -71,6 +72,12 @@ testing =
     setuptools
     pytest
     pytest-cov
+
+dev = 
+    flake8
+    isort
+    black
+    pyscaffold>=4.6
 
 [options.entry_points]
 # Add here console scripts like:
