--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     requests>=2.2,<3.0
     minio
+    ipython
 
 [options.packages.find]
 where = src
