--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,8 @@ install_requires =
     requests>=2.2,<3.0
     minio
     ipython
+    ipykernel
+    PyYaml
 
 [options.packages.find]
 where = src
