Converted the client to the new API, some bugs still remain, but not necessarily in the client. Therefore, this commit.

--- a/setup.cfg
+++ b/setup.cfg
@@ -102,7 +102,7 @@ dev =
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
 addopts =
-    --cov stelar_client --cov-report term-missing
+    --cov stelar.client --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -137,6 +137,6 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 4.6
-package = stelar_client
+package = stelar.client
 extensions =
     no_skeleton
