Update to version 0.1.10

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = stelar_client
-version = 0.0.1
+version = 0.1.10
 description = A Python client for the STELAR KLMS API.
 author = Vasilis Samoladas, Nikolas Bakatselos, Dimitris Petrou
 author_email = vsam@softnet.tuc.gr, nbakatselos@tuc.gr, dpetrou@tuc.gr
@@ -13,10 +13,10 @@ license = AGPL
 license_files = LICENSE
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/stelar-eu/stelar_client/
 # Add here related links, for example:
 project_urls =
-    Documentation = https://github.com/stelar-eu/stelar_client/
+    Documentation = https://stelar-client.readthedocs.io/
     Source = https://github.com/stelar-eu/stelar_client/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
