--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = stelar_client
-version = 0.1.10
+#version = 0.3.2
 description = A Python client for the STELAR KLMS API.
 author = Vasilis Samoladas, Nikolas Bakatselos, Dimitris Petrou
 author_email = vsam@softnet.tuc.gr, nbakatselos@tuc.gr, dpetrou@tuc.gr
