A mejor cleanup of the documentation was made, including: - editing the configuration of sphinx to properly auto-document the client - removing much cruft generated by pyscaffold back when - added documentation (a readme, start of a "Quickstart", and bullet list   for user guide.

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,3 +3,11 @@
 # under `install_requires` in `setup.cfg` is also listed here!
 sphinx>=3.2.1
 sphinx_rtd_theme
+importlib-metadata; python_version<"3.8"
+requests>=2.2,<3.0
+minio
+pandas
+ipython
+ipykernel
+PyYaml
+geojson
