--- a/setup.cfg
+++ b/setup.cfg
@@ -32,10 +32,13 @@ platforms = any
 #Development Status :: 3 - Alpha
 #Development Status :: 4 - Beta
 classifiers =
-    Development Status :: 1 - Planning
-    Programming Language :: Python
-    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
+    Development Status :: 3 - Alpha
+    Programming Language :: Python :: 3
     Topic :: Database :: Front-Ends
+
+# Removed the following classifier in order of a new release
+#    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
+
 
 [options]
 zip_safe = False
