Some eidts to reduce warnings in documentation editor

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,10 @@ minversion = 3.24
 envlist = default
 isolated_build = True
 
+[doc8]
+# Doc8 configuration for checking documentation files
+ignore = D002
+max-line-length = 160
 
 [testenv]
 description = Invoke pytest to run automated tests
